# MintSpace

./: .gitattributes  .gitignore
Backend/: Cargo.toml
Backend/Docker/: Dockerfile
Backend/src/: main.rs
Backend/workspace/user_contract/: Cargo.toml
Backend/workspace/user_contract/src/: lib.rs
Backend/workspace/user_contract/tests/: integration.rs
frontend/: package-lock.json  package.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @floating-ui.js  @monaco-editor.js  @radix-ui.js  @stellar.js  @swc.js  aria-hidden.js  asynckit.js  axios.js  bare-addon-resolve.js  bare-module-resolve.js  bare-semver.js  base32.js.js  bignumber.js.js  call-bind-apply-helpers.js  class-variance-authority.js  clsx.js  combined-stream.js  delayed-stream.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  eventsource.js  follow-redirects.js  form-data.js  function-bind.js  get-intrinsic.js  get-nonce.js  get-proto.js  gopd.js  has-symbols.js  has-tostringtag.js  hasown.js  mime-db.js  (+24 more)
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: action-buttons.tsx  code-editor-panel.tsx  header.tsx  sdk-version-selector.tsx  terminal-panel.tsx  wallet-connection.tsx
frontend/context/: sdk-version-context.tsx  wallet-context.tsx
frontend/lib/: code-examples.ts  utils.ts
(+99 files in other folders)
