[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# Common dependencies for all targets
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

# Native-only dependencies (won't be used for WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web = "4"
actix-cors = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
soroban-sdk = { version = "22.0.7" }

[workspace]
members = ["workspace/user_contract"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true